--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
   service:
-    image: "registry.khitkabar.xyz:5443/${CI_PROJECT_NAME}:${CI_COMMIT_BRANCH}"
+    image: "registry.khitkabar.com:5443/${CI_PROJECT_NAME}:${CI_COMMIT_BRANCH}"
     container_name: "${CI_PROJECT_NAME}-${CI_COMMIT_BRANCH}"
     networks:
       - server
