--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,7 @@ deploy-dev-job:
     - docker login registry.khitkabar.com:5443 -u khitkabar -p khit.kabar.registry.123
     - source .server.env
     - docker-compose up -d
+    - docker builder prune -a -f
 
 deploy-prod-job:
   stage: deploy
@@ -56,3 +57,4 @@ deploy-prod-job:
     - docker login registry.khitkabar.com:5443 -u khitkabar -p khit.kabar.registry.123
     - source .server.env
     - docker-compose up -d
+    - docker builder prune -a -f
