--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "objection": "^3.0.1",
     "pg": "^8.8.0",
     "prettier": "^2.8.1",
     "uuid": "^9.0.0",
     "wildcard-match": "^5.1.2",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "^8.34.0"
