[js] initial commit

--- a/.example.env
+++ b/.example.env
@@ -1,8 +1,8 @@
-DB_HOST=api.khitkabar.com
+DB_HOST=ep-rough-queen-370329.ap-southeast-1.aws.neon.tech
 DB_PORT=5432
-DB_USER=khitkabar
-DB_PASS=
-DB_NAME=
+DB_USER=mtk246
+DB_PASS=yjO04AqVaCzo
+DB_NAME=neondb
 
 MINIO_HOST=file.khitkabar.com
 MINIO_PORT=9000
